--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,6 +55,10 @@
             android:layout_weight="1"
             android:layout_marginBottom="@dimen/_10sdp"
             android:background="@color/white"
+            app:navGraph="@navigation/main_navigation"
+            android:id="@+id/container"
+            android:name = "androidx.navigation.fragment.NavHostFragment"
+            app:defaultNavHost = "false"
             />
 
         <FrameLayout
