--- a/app/src/main/res/layout/fragment_pos.xml
+++ b/app/src/main/res/layout/fragment_pos.xml
@@ -49,7 +49,35 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical"
+                    android:layout_marginEnd="@dimen/_5sdp"
                     >
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:background="@drawable/bg_bugungi"
+                        android:paddingVertical="@dimen/_5sdp"
+                        android:paddingHorizontal="@dimen/_5sdp"
+                        android:gravity="center_vertical"
+                        >
+                        <EditText
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:paddingHorizontal="@dimen/_5sdp"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/_12ssp"
+                            android:hint="Haridorlar"
+                            />
+                        <ImageView
+                            android:layout_width="@dimen/_20sdp"
+                            android:layout_height="@dimen/_20sdp"
+                            android:src="@drawable/ic_search"
+                            android:layout_marginHorizontal="@dimen/_2sdp"
+                            />
+
+                    </LinearLayout>
+
 
                 </LinearLayout>
 
@@ -58,6 +86,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical"
+                    android:layout_marginStart="@dimen/_5sdp"
                     >
 
                 </LinearLayout>
