--- a/app/src/main/res/layout/fragment_mahsulotlar.xml
+++ b/app/src/main/res/layout/fragment_mahsulotlar.xml
@@ -86,14 +86,14 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="@dimen/_50sdp"
-                    android:layout_height="@dimen/_40sdp"
-                    android:src="@drawable/kiyimlar" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/products" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Kiyimlar"
+                    android:text="Barchasi"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_10ssp"
                     android:textStyle="bold" />
@@ -195,7 +195,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_product"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 tools:listitem="@layout/item_rv_product"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 android:layout_weight="1"
