--- a/app/src/main/res/layout/fragment_sklad.xml
+++ b/app/src/main/res/layout/fragment_sklad.xml
@@ -3,12 +3,81 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/grey"
     tools:context=".FragmentSklad">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:orientation="vertical"
+       >
+       <androidx.cardview.widget.CardView
+           android:layout_width="match_parent"
+           android:layout_height="?android:attr/actionBarSize"
+           android:elevation="@dimen/_5sdp"
+           >
+
+
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:background="@color/grey"
+           android:gravity="center"
+           android:orientation="horizontal">
+
+           <ImageView
+               android:layout_width="@dimen/_25sdp"
+               android:layout_height="@dimen/_25sdp"
+               android:src="@drawable/ombor" />
+
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_marginStart="@dimen/_5sdp"
+               android:text="Ombor nazorati"
+               android:textColor="@color/black"
+               android:textSize="@dimen/_14ssp" />
+
+       </LinearLayout>
+       </androidx.cardview.widget.CardView>
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="horizontal"
+           android:layout_margin="@dimen/_10sdp"
+           >
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="Mahsulot haqida"
+               android:textSize="@dimen/_12ssp"
+               android:textColor="@color/black"
+               />
+           <View
+               android:layout_width="0dp"
+               android:layout_height="1dp"
+               android:layout_weight="1"
+               />
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="Soni"
+               android:textSize="@dimen/_12ssp"
+               android:textColor="@color/black"
+               />
+       </LinearLayout>
+
+       <androidx.recyclerview.widget.RecyclerView
+           android:id="@+id/rv_ombor"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+           tools:listitem="@layout/item_rv_ombor"
+           >
+
+       </androidx.recyclerview.widget.RecyclerView>
+
+   </LinearLayout>
 
 </FrameLayout>
