--- a/app/src/main/res/layout/fragment_pos.xml
+++ b/app/src/main/res/layout/fragment_pos.xml
@@ -518,7 +518,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_chek"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_150sdp"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     tools:listitem="@layout/item_chek_product" />
 
