--- a/app/src/main/res/layout/fragment_pos.xml
+++ b/app/src/main/res/layout/fragment_pos.xml
@@ -518,8 +518,10 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_chek"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_150sdp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    android:layout_marginTop="@dimen/_5sdp"
                     tools:listitem="@layout/item_chek_product" />
 
                 <ImageView
@@ -561,7 +563,8 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/img_print"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginTop="@dimen/_3sdp"
+                    android:layout_marginBottom="@dimen/_2sdp"
                     />
 
 
